moving style cop to core.props
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/properties/webjobs.props
+++ b/properties/webjobs.props
@@ -1,6 +1,5 @@
 <Project>
-  <Import Project=".\common.props" />
-  <Import Project=".\nuget.props" />
+  <Import Project=".\core.props" />
 
   <PropertyGroup>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</PackageIconUrl>
