generating nuget for core project
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/src/Microsoft.Azure.Functions.Extensions.Dapr.Core/Microsoft.Azure.Functions.Extensions.Dapr.Core.csproj
+++ b/src/Microsoft.Azure.Functions.Extensions.Dapr.Core/Microsoft.Azure.Functions.Extensions.Dapr.Core.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Microsoft.Azure.Functions.Extensions.Dapr.Core</PackageId>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <!-- Microsoft 1st party dependencies -->
