--- a/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
+++ b/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
@@ -8,7 +8,7 @@
     <Title>Microsoft.Azure.WebJobs.Extensions.Dapr</Title>
     <Description>Dapr extension for Azure functions using the in-proc worker.</Description>
     <Summary>Dapr extension for Azure functions using the in-proc worker.</Summary>
-    <!-- Default Version for dev -->
+    <!-- Default version for dev -->
     <Version>99.99.99</Version>
   </PropertyGroup>
 
@@ -34,8 +34,23 @@
     <PackageReference Include="CloudNative.CloudEvents" Version="2.6.0" />
     <PackageReference Include="CloudNative.CloudEvents.SystemTextJson" Version="2.6.0" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Azure.Functions.Extensions.Dapr.Core\Microsoft.Azure.Functions.Extensions.Dapr.Core.csproj" />
   </ItemGroup>
+
+  <!-- Copy the nupkg to local-packages folder -->
+  <Target Name="CopyNupkg" AfterTargets="Build">
+    <ItemGroup>
+      <_Packages Include="..\..\bin\$(Configuration)\nugets\*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(_Packages)" DestinationFolder="../../local-packages" />
+    <Message Text="Copied .nupkgs to local-packages" Importance="high" />
+  </Target>
+
+  <!-- Delete the nuget cache for the package -->
+  <Target Name="RemoveNugetPackageCache" BeforeTargets="Build">
+    <RemoveDir Directories="$(NugetPackageRoot)/$(PackageId.ToLower())/99.99.99"></RemoveDir>
+    <Message Text="Deleted nuget cache for $(PackageId.ToLower())/99.99.99" Importance="high" />
+  </Target>
 </Project>
