--- a/nuget.config
+++ b/nuget.config
@@ -1,17 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+        <!-- Edit the path below to absolute -->
         <add key="nuget.local" value="./local-packages" />
     </packageSources>
 
     <!-- Define mappings by adding package patterns beneath the target source. -->
-    <!-- Microsoft.Azure.WebJobs.Extensions.Dapr package should be from nuget.local, everything else from nuget.org. -->
+    <!-- Microsoft.Azure.WebJobs.Extensions.Dapr and Microsoft.Azure.Functions.Extensions.Dapr.Core
+    package should be from nuget.local, everything else from nuget.org. -->
     <packageSourceMapping>
         <!-- key value for <packageSource> should match key values from <packageSources> element -->
         <packageSource key="nuget.local">
             <package pattern="Microsoft.Azure.WebJobs.Extensions.Dapr" />
+            <package pattern="Microsoft.Azure.Functions.Extensions.Dapr.Core" />
         </packageSource>
         <packageSource key="nuget.org">
             <package pattern="*" />
