--- a/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
+++ b/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
@@ -39,18 +39,18 @@
     <ProjectReference Include="..\Microsoft.Azure.Functions.Extensions.Dapr.Core\Microsoft.Azure.Functions.Extensions.Dapr.Core.csproj" />
   </ItemGroup>
 
-  <!-- Copy the nupkg to local-packages folder -->
-  <Target Name="CopyNupkg" AfterTargets="Build">
-    <ItemGroup>
-      <_Packages Include="..\..\bin\$(Configuration)\nugets\*.nupkg" />
-    </ItemGroup>
-    <Copy SourceFiles="@(_Packages)" DestinationFolder="../../local-packages" />
-    <Message Text="Copied .nupkgs to local-packages" Importance="high" />
-  </Target>
-
   <!-- Delete the nuget cache for the package -->
   <Target Name="RemoveNugetPackageCache" BeforeTargets="Build">
     <RemoveDir Directories="$(NugetPackageRoot)/$(PackageId.ToLower())/99.99.99"></RemoveDir>
     <Message Text="Deleted nuget cache for $(PackageId.ToLower())/99.99.99" Importance="high" />
+  </Target>
+
+  <!-- Copy the nupkg to local-packages folder -->
+  <Target Name="CopyNupkg" AfterTargets="Pack">
+    <ItemGroup>
+      <_Packages Include="..\..\bin\$(Configuration)\nugets\$(PackageId.ToLower()).*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(_Packages)" DestinationFolder="../../local-packages" />
+    <Message Text="Copied $(PackageId.ToLower()) to local-packages" Importance="high" />
   </Target>
 </Project>
