--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NUPKG_OUTDIR: bin/Release/nugets
       APP_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+      DEV_VERSION_SUFFIX: 99.99.99
       DOTNET_SAMPLE_APP_IMAGE_NAME: dotnet-azurefunction
+      NUPKG_OUTDIR: bin/Release/nugets
     steps:
       - uses: actions/checkout@v2
       - name: Parse release version
@@ -32,12 +33,15 @@ jobs:
         with:
           dotnet-version: 6.0
       - name: Build solution - release
-        run: dotnet build --configuration release
+        run: dotnet build --configuration release --configfile nuget.config
       - name: Run Unit Tests - release
         run: dotnet test --configuration release --no-build --verbosity normal
       - name: Generate Nuget Packages - release
         run: dotnet pack --configuration release -p:PackageVersion=${REL_VERSION}
-      - name: upload artifacts
+        # Since we create local development nuget packages, we need to clean them up.
+      - name: Clean up development Nuget packages
+        run: rm -rf ${{ env.NUPKG_OUTDIR }}/*${{ env.DEV_VERSION_SUFFIX }}*.nupkg
+      - name: Upload artifacts
         uses: actions/upload-artifact@master
         with:
           name: release_drop
@@ -66,7 +70,7 @@ jobs:
       - name: Publish nuget packages to nuget.org for tags
         if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
         run: |
-          dotnet nuget push "${{ env.NUPKG_OUTDIR }}/Dapr*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
+          dotnet nuget push "${{ env.NUPKG_OUTDIR }}/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
