--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ on:
       - release-*
     paths-ignore:
       - "**.md"
+  workflow_dispatch: {}
 
 jobs:
   build:
@@ -32,6 +33,8 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0
+      - name: (TEMP) list files
+        run: ls -la
       - name: Build solution - release
         run: dotnet build --configuration release --configfile nuget.config
       - name: Run Unit Tests - release
