--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0
+      - name: (TEMP) Restore nuget packages - release
+        run: dotnet restore --configfile nuget.config
       - name: (TEMP) list files
         run: ls -la
       - name: Build solution - release
