--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       APP_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+      CONFIGURATION: Release
       DEV_VERSION_SUFFIX: 99.99.99
       DOTNET_SAMPLE_APP_IMAGE_NAME: dotnet-azurefunction
-      NUPKG_OUTDIR: bin/release/nugets
+      NUPKG_OUTDIR: bin/Release/nugets
     steps:
       - uses: actions/checkout@v2
       - name: Parse release version
@@ -33,12 +34,12 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0
-      - name: Build solution - release
-        run: dotnet build --configuration release --configfile nuget.config
-      - name: Run Unit Tests - release
-        run: dotnet test --configuration release --no-build --verbosity normal
-      - name: Generate Nuget Packages - release
-        run: dotnet pack --configuration release -p:PackageVersion=${REL_VERSION}
+      - name: Build solution - ${{ env.CONFIGURATION }}
+        run: dotnet build --configuration ${{ env.CONFIGURATION }} --configfile nuget.config
+      - name: Run Unit Tests - ${{ env.CONFIGURATION }}
+        run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      - name: Generate Nuget Packages - ${{ env.CONFIGURATION }}
+        run: dotnet pack --configuration ${{ env.CONFIGURATION }} -p:PackageVersion=${REL_VERSION}
         # Since we create local development nuget packages, we need to clean them up.
       - name: Clean up development Nuget packages
         run: rm -rf ${{ env.NUPKG_OUTDIR }}/*${{ env.DEV_VERSION_SUFFIX }}*.nupkg
