--- a/samples/javascript-azurefunction/local.settings.json
+++ b/samples/javascript-azurefunction/local.settings.json
@@ -4,6 +4,7 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "StateStoreName": "statestore", // should be same as metatdata.name in components/statestore.yaml
-    "KafkaBindingName": "sample-topic" // should be same as metatdata.name in components/kafka_binding.yaml
+    "KafkaBindingName": "sample-topic", // should be same as metatdata.name in components/kafka_binding.yaml
+    "AzureWebJobsSecretStorageType": "files"
   }
 }
