--- a/properties/nuget.props
+++ b/properties/nuget.props
@@ -30,6 +30,6 @@
   <PropertyGroup>
     <OutputPath>$(RepoRoot)bin\$(Configuration)\prod\$(MSBuildProjectName)\</OutputPath>
     <!-- Stylecop needs the documentation file to exist -->
-    <DocumentationFile>$(OutputPath)$(MSBuildProjectName).xml</DocumentationFile>
+    <DocumentationFile>$(OutputPath)\$(MSBuildProjectName).xml</DocumentationFile>
   </PropertyGroup>
 </Project>
