--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,15 +43,16 @@ jobs:
         run: dotnet pack --configuration ${{ env.CONFIGURATION }} -p:PackageVersion=${REL_VERSION}
         # Since we create local development nuget packages, we need to clean them up.
       - name: Clean up development Nuget packages
-        if: startswith(github.ref, 'refs/tags/v')
+        # if: startswith(github.ref, 'refs/tags/v')
         run: rm -rf ${{ env.NUPKG_OUTDIR }}/*${{ env.DEV_VERSION_SUFFIX }}*.nupkg
       - name: Upload artifacts
         uses: actions/upload-artifact@master
+        # if: startswith(github.ref, 'refs/tags/v')
         with:
           name: release_drop
           path: ${{ env.NUPKG_OUTDIR }}
       - name: Publish binaries to github for tags
-        if: startswith(github.ref, 'refs/tags/v')
+        # if: startswith(github.ref, 'refs/tags/v')
         run: |
           sudo npm install --silent --no-progress -g github-release-cli
 
@@ -71,10 +72,10 @@ jobs:
             --tag "v${REL_VERSION}" \
             --name "Dapr Azure Functions Extension v${REL_VERSION}" \
             ${RELEASE_ARTIFACT[*]}
-      - name: Publish nuget packages to nuget.org for tags
-        if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
-        run: |
-          dotnet nuget push "${{ env.NUPKG_OUTDIR }}/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
+      # - name: Publish nuget packages to nuget.org for tags
+      #   if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
+      #   run: |
+      #     dotnet nuget push "${{ env.NUPKG_OUTDIR }}/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
