--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,24 +54,14 @@ jobs:
       - name: Publish binaries to github for tags
         # if: startswith(github.ref, 'refs/tags/v')
         run: |
-          sudo npm install --silent --no-progress -g github-release-cli
-
-          # Parse repository to get owner and repo names
-          OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
-          REPO_NAME="${GITHUB_REPOSITORY#*/}"
-
-          # Get the list of files
           RELEASE_ARTIFACT=(${{ env.NUPKG_OUTDIR }}/*)
-
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           echo "Uploading Nuget packages to GitHub Release"
-          github-release upload \
-            --owner $OWNER_NAME \
-            --repo $REPO_NAME \
-            --body "Release dapr azure functions extension v${REL_VERSION}" \
-            --tag "v${REL_VERSION}" \
-            --name "Dapr Azure Functions Extension v${REL_VERSION}" \
-            ${RELEASE_ARTIFACT[*]}
+
+          gh release create "v${REL_VERSION}" "${env.NUPKG_OUTDIR}/*" \
+          --repo "${GITHUB_REPOSITORY}" \
+          --title "Azure Functions Dapr Extension v${REL_VERSION}" \
+          --notes "Release Azure Functions Dapr Extension v${REL_VERSION}"
       # - name: Publish nuget packages to nuget.org for tags
       #   if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
       #   run: |
