--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         # if: startswith(github.ref, 'refs/tags/v')
         run: |
           RELEASE_ARTIFACT=(${NUPKG_OUTDIR}/*)
-          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          export GITHUB_TOKEN=${{ secrets.RELEASE_TOKEN }}
           echo "Uploading Nuget packages to GitHub Release"
 
           gh release create "v${REL_VERSION}" ${RELEASE_ARTIFACT[*]} \
