Update build pipeline, add CODEOWNERS and development docs (#114)
* Add CODEOWNERS and docs

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* TEMP: changes for testing

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Use GH CLI instead of github-release-cli

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Try to fix this one?

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Add another token

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Update

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Remove the IF

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Ok!

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Edit version

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Another try

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Prepare for release

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Use export syntax

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Skip signing

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Use GitHub token

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Reorder steps

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

* Add release notes

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

---------

Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,43 +38,6 @@ jobs:
         run: dotnet build --configuration ${{ env.CONFIGURATION }} --configfile nuget.config
       - name: Run Unit Tests - ${{ env.CONFIGURATION }}
         run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
-      - name: Generate NuGet Packages - ${{ env.CONFIGURATION }}
-        if: startswith(github.ref, 'refs/tags/v')
-        run: dotnet pack --configuration ${{ env.CONFIGURATION }} -p:PackageVersion=${REL_VERSION}
-        # Since we create local development nuget packages, we need to clean them up.
-      - name: Clean up development Nuget packages
-        if: startswith(github.ref, 'refs/tags/v')
-        run: rm -rf ${{ env.NUPKG_OUTDIR }}/*${{ env.DEV_VERSION_SUFFIX }}*.nupkg
-      - name: Upload artifacts
-        uses: actions/upload-artifact@master
-        with:
-          name: release_drop
-          path: ${{ env.NUPKG_OUTDIR }}
-      - name: Publish binaries to github for tags
-        if: startswith(github.ref, 'refs/tags/v')
-        run: |
-          sudo npm install --silent --no-progress -g github-release-cli
-
-          # Parse repository to get owner and repo names
-          OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
-          REPO_NAME="${GITHUB_REPOSITORY#*/}"
-
-          # Get the list of files
-          RELEASE_ARTIFACT=(${{ env.NUPKG_OUTDIR }}/*)
-
-          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          echo "Uploading Nuget packages to GitHub Release"
-          github-release upload \
-            --owner $OWNER_NAME \
-            --repo $REPO_NAME \
-            --body "Release dapr azure functions extension v${REL_VERSION}" \
-            --tag "v${REL_VERSION}" \
-            --name "Dapr Azure Functions Extension v${REL_VERSION}" \
-            ${RELEASE_ARTIFACT[*]}
-      - name: Publish nuget packages to nuget.org for tags
-        if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
-        run: |
-          dotnet nuget push "${{ env.NUPKG_OUTDIR }}/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
@@ -91,8 +54,45 @@ jobs:
       - name: Push samples docker images
         if: github.event_name != 'pull_request'
         run: |
-          echo performing docker login 
+          echo performing docker login
           docker login -u ${{ secrets.DOCKER_REGISTRY_ID }} -p ${{ secrets.DOCKER_REGISTRY_PASS }}
           echo pushing docker image for ${{ env.DOTNET_SAMPLE_APP_IMAGE_NAME }}
           echo image with tag ${{ env.APP_REGISTRY }}/${{ env.DOTNET_SAMPLE_APP_IMAGE_NAME }}:${{ env.REL_VERSION }} will be pushed
           docker push ${{ env.APP_REGISTRY }}/${{ env.DOTNET_SAMPLE_APP_IMAGE_NAME }}:${{ env.REL_VERSION }}
+      - name: Generate NuGet Packages - ${{ env.CONFIGURATION }}
+        if: startswith(github.ref, 'refs/tags/v')
+        run: dotnet pack --configuration ${{ env.CONFIGURATION }} -p:PackageVersion=${REL_VERSION}
+        # Since we create local development nuget packages, we need to clean them up.
+      - name: Clean up development Nuget packages
+        if: startswith(github.ref, 'refs/tags/v')
+        run: rm -rf $NUPKG_OUTDIR/*${DEV_VERSION_SUFFIX}.*{nupkg,snupkg}
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        if: startswith(github.ref, 'refs/tags/v')
+        with:
+          name: release_drop
+          path: ${{ env.NUPKG_OUTDIR }}
+      - name: Create a GitHub Release
+        if: startswith(github.ref, 'refs/tags/v')
+        run: |
+          RELEASE_ARTIFACT=(${NUPKG_OUTDIR}/*)
+          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          echo "Uploading Nuget packages to GitHub Release"
+
+          gh release create "v${REL_VERSION}" ${RELEASE_ARTIFACT[*]} \
+          --repo "${GITHUB_REPOSITORY}" \
+          --title "Azure Functions Dapr Extension v${REL_VERSION}" \
+          --notes "Release Azure Functions Dapr Extension v${REL_VERSION}"
+      - name: Upload NuGet packages to Azure blob storage
+        if: |
+          startsWith(github.ref, 'refs/tags/v') &&
+          !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease')) &&
+          github.repository == 'Azure/azure-functions-dapr-extension'
+        run: |
+          # Install azcopy
+          wget -O azcopy_v10.tar.gz https://aka.ms/downloadazcopy-v10-linux && tar -xf azcopy_v10.tar.gz --strip-components=1
+
+          # Upload nuget packages to Azure blob storage
+          export AZCOPY_SPA_CLIENT_SECRET=${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
+          ./azcopy login --service-principal --application-id ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
+          ./azcopy copy "${{ env.NUPKG_OUTDIR }}/*" "https://azuresdkpartnerdrops.blob.core.windows.net/drops/azure-functions-dapr-extension/dotnet/${{ env.REL_VERSION }}/"
