--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -53,7 +53,10 @@ jobs:
         run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
       - name: Generate code coverage report
-        run: reportgenerator "-reports:**/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:HtmlInline_AzurePipelines"
+        run: dotnet test --collect:"XPlat Code Coverage" --logger trx
+
+      - name: Convert coverage report to Cobertura format
+        run: dotnet reportgenerator "-reports:**/*.trx" "-targetdir:coverage" "-reporttypes:Cobertura"
 
       - name: Publish code coverage report
         uses: actions/upload-artifact@v2
