--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,13 @@ jobs:
         run: dotnet test --configuration ${{ env.CONFIGURATION }} --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
       - name: Codecov
         uses: codecov/codecov-action@v3
+      - name: upload test results
+        run: |
+          cd /home/runner/work/azure-functions-dapr-extension/azure-functions-dapr-extension/test/DaprExtensionTests/
+      - name: Publish code coverage report
+        uses: actions/upload-artifact@v2
+      - name: change directory
+        run: cd /home/runner/work/azure-functions-dapr-extension/azure-functions-dapr-extension/
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
