--- a/test/DaprExtensionTests/DaprExtensionTests.csproj
+++ b/test/DaprExtensionTests/DaprExtensionTests.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
