--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,14 +37,17 @@ jobs:
       - name: Build solution - ${{ env.CONFIGURATION }}
         run: dotnet build --configuration ${{ env.CONFIGURATION }} --configfile nuget.config
       - name: Run Unit Tests - ${{ env.CONFIGURATION }}
-        run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
-      - name: Codecov
-        uses: codecov/codecov-action@v3
-      - name: Publish code coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: Code Coverage
-          path: /home/runner/work/azure-functions-dapr-extension/azure-functions-dapr-extension/test/DaprExtensionTests/
+        run: |
+          cd ./test/DaprExtensionTests
+          dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v3
+      # - name: Publish code coverage report
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Code Coverage
+      #     path: /home/runner/work/azure-functions-dapr-extension/azure-functions-dapr-extension/test/DaprExtensionTests/
+
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
