--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,27 @@ jobs:
         with:
           name: Code Coverage
           path: coverage
+      - name: Analyze code coverage
+        run: |
+          # Read the coverage summary from the generated report
+          $coverageSummary = Get-Content coverage/Summary.txt | Select-String 'Total'
+      
+          # Extract the coverage percentage
+          $coveragePercentage = ($coverageSummary -split '\s+')[1]
+      
+          # Convert the coverage percentage to an integer
+          $coveragePercentage = [int]$coveragePercentage
+      
+          # Set the desired coverage threshold
+          $coverageThreshold = 70
+      
+          # Check if the coverage percentage meets the threshold
+          if ($coveragePercentage -lt $coverageThreshold) {
+            Write-Host "Code coverage is below the threshold of $coverageThreshold%."
+            exit 1
+          } else {
+            Write-Host "Code coverage meets the threshold of $coverageThreshold%."
+          }
 
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
