check code coverage
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,12 @@ jobs:
           path: coverage
       - name: Analyze code coverage
         run: |
+          # Install reportgenerator
+          dotnet tool install -g dotnet-reportgenerator-globaltool
+      
+          # Run reportgenerator to generate the coverage report
+          reportgenerator "-reports:**/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:HtmlInline_AzurePipelines"
+        
           # Read the coverage summary from the generated report
           coverageSummary=$(cat coverage/Summary.txt)
       
