check code coverage
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           reportgenerator "-reports:**/coverage.cobertura.xml" "-targetdir:coverage" "-reporttypes:HtmlInline_AzurePipelines"
         
           # Read the coverage summary from the generated report
-          coverageSummary=$(cat coverage/Summary.txt)
+          coverageSummary=$(cat coverage/index.htm)
       
           # Extract the coverage percentage using grep
           coveragePercentage=$(echo "$coverageSummary" | grep -oP 'Total\s+\K\d+')
